# supply-chain-data-notebooks

./: .gitignore  ANALISIS_NOTEBOOKS.md  LICENSE  README.md  pyproject.toml  requirements.txt
config/: notebooks_index.yml
data/synthetic_generators/: generate_all.ps1  generate_data.py
docs/: data_dictionary.md  overview.md  use_case_catalog.md
notebooks/00_common/: PLANTILLA.ipynb
notebooks/10_data_engineering/: DE-01-ingesta.ipynb  DE-02-pipeline_incremental.ipynb
notebooks/20_data_architecture/: DA-01-modelo_dimensional.ipynb
notebooks/30_data_science_ml/: DS-01-eda.ipynb  DS-02-estacionalidad.ipynb  DS-03-service_level_cost_tradeoff.ipynb  DS-04-last_mile_analytics.ipynb  DS-05-supply_risk_scenarios.ipynb
notebooks/40_business_analytics_bi/: BA-01-dashboard_otif.ipynb  BA-02-cost_to_serve.ipynb  BA-02-sop_scenarios.ipynb  BA-03-warehouse_productivity.ipynb  BA-04-supplier_performance.ipynb
notebooks/50_optimization_or/: OR-01-stock_seguridad.ipynb  OR-02-politicas_inventario.ipynb  OR-02-vrp_capacidad.ipynb  OR-03-capacity_planning_dc_fleet.ipynb  OR-04-multi_echelon_inventory.ipynb  OR-05-warehouse_slotting.ipynb  OR-06-dock_queue_simulation.ipynb
notebooks/60_realtime_iot/: RT-01-stream_tracking.ipynb  RT-02-fleet_predictive_maintenance.ipynb  RT-03-cold_chain_monitoring.ipynb  TR-01-transporte_masivo.ipynb
notebooks/70_ai_gen_agents/: GEN-01-rag_kpi.ipynb
notebooks/80_governance_quality/: DG-01-perfilado_calidad.ipynb
scripts/: fix_notebook_metadata.py  fix_notebook_metadata_v2.py
src/: __init__.py
src/models/: __init__.py
(+12 files in other folders)
